--- a/index.html
+++ b/index.html
@@ -3100,7 +3100,7 @@
     >
       <div class="container">
         <div class="flex flex-wrap">
-          <div class="w-full px-4">
+          <div class="w-full md:w-1/2 px-4 mb-7">
             <div class="w-full">
               <div class="w-2 h-auto">
                 <img
@@ -3153,6 +3153,59 @@
                   </svg>
                 </a>
               </div>
+            </div>
+          </div>
+          
+          <div class="w-full md:w-1/2 px-4">
+            <div class="w-full mb-10">
+              <h4 class="text-white text-lg font-semibold mb-4">Contact Us</h4>
+              <ul>
+                <li>
+                  <p class="text-white">Law Club President:</p> 
+                  <a
+                    href="mailto:president@nuslawclub.com"
+                    class="
+                      inline-block
+                      text-base text-[#f3f4fe]
+                      hover:text-primary
+                      leading-loose
+                      mb-2
+                    "
+                  >
+                    president@nuslawclub.com
+                  </a>
+                </li>
+                <li>
+                  <p class="text-white">Law Club Vice-President:</p> 
+                  <a
+                    href="mailto:vicepresident@nuslawclub.com"
+                    class="
+                      inline-block
+                      text-base text-[#f3f4fe]
+                      hover:text-primary
+                      leading-loose
+                      mb-2
+                    "
+                  >
+                    vicepresident@nuslawclub.com
+                  </a>
+                </li>
+                <li>
+                  <p class="text-white">Law Club Corporate Relations Director:</p> 
+                  <a
+                    href="javascript:void(0)"
+                    class="
+                      inline-block
+                      text-base text-[#f3f4fe]
+                      hover:text-primary
+                      leading-loose
+                      mb-2
+                    "
+                  >
+                    corporate@nuslawclub.com
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
