--- a/index.html
+++ b/index.html
@@ -2356,8 +2356,7 @@
                   </a>
                 </h3>
                 <p class="text-base text-body-color">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  The Mooting and Debating Club is a student-run organisation dedicated to promoting advocacy skills in all its varied forms – it conducts trainings, competitions, and student exchanges.
                 </p>
               </div>
             </div>
@@ -2398,8 +2397,7 @@
                   </a>
                 </h3>
                 <p class="text-base text-body-color">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  The NUS Pro Bono Group is dedicated to the promotion and practice of effective and meaningful pro bono at NUS Law. It works with many beneficiaries all over Singapore, and has the ultimate aim of inspiring our students to be pro bono champions when they enter the profession.
                 </p>
               </div>
             </div>
@@ -2440,8 +2438,7 @@
                   </a>
                 </h3>
                 <p class="text-base text-body-color">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  The CDRC aims to promote alternative dispute resolution skills such as mediation and negotiation. As a young club that was formed in 2017, the CDRC has come a long way in paving the road for collaborative dispute resolution techniques in Singapore.
                 </p>
               </div>
             </div>
@@ -2482,8 +2479,7 @@
                   </a>
                 </h3>
                 <p class="text-base text-body-color">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  NUS Law Students' International Relations Committee is one of the largest sub-clubs in NUS Law by membership.It facilitates interaction between international and local students and organises internal NUS Law events to promote social life in school.
                 </p>
               </div>
             </div>
@@ -2524,8 +2520,7 @@
                   </a>
                 </h3>
                 <p class="text-base text-body-color">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  '<em>Vertitatis Et Aequitatis Tenax</em>' 'persevering in truth and justice' — formed in September 2009, the Criminal Justice Club works towards advocating positive change in Singapore’s criminal justice landscape.
                 </p>
               </div>
             </div>
@@ -2566,8 +2561,7 @@
                   </a>
                 </h3>
                 <p class="text-base text-body-color">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  The Singapore Law Review is an independent, student-run legal publication body, dating all the way back to 1958, when NUS was still a part of the University of Malaya. Aside from a publication hiatus between 1973 and 1982, the Singapore Law Review has been publishing actively ever since.
                 </p>
               </div>
             </div>
@@ -2608,8 +2602,7 @@
                   </a>
                 </h3>
                 <p class="text-base text-body-color">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  Justified heads three student-run media platforms exclusive to the law faculty - Justified, the online portal that covers events in law school; Overheard@BTC, a closed Facebook group that provides consistent updates on law school events and stories; and Humans of BTC, which features personal stories from members of law school.
                 </p>
               </div>
             </div>
@@ -2650,8 +2643,7 @@
                   </a>
                 </h3>
                 <p class="text-base text-body-color">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  Alt+Law is a student-focused platform that explores the intersection between law and technology to position students at the forefront of change. Through a variety of collaborative initiatives, students can nurture their legal-tech interests and gain exposure in this exciting, high growth space.
                 </p>
               </div>
             </div>
@@ -2688,12 +2680,11 @@
                       hover:text-primary
                     "
                   >
-                    Environmental Law Students Association
+                    Environmental Law Students' Association
                   </a>
                 </h3>
                 <p class="text-base text-body-color">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  The Environmental Law Students' Association seeks to become the undergraduate centre in intergenerational environmental law and policy with a substantive focus on Singapore environment and land use law.
                 </p>
               </div>
             </div>
@@ -2734,8 +2725,7 @@
                   </a>
                 </h3>
                 <p class="text-base text-body-color">
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                  The Intellectual Property Students' Association aims to raise awareness of IP rights and IP-related issues by facilitating the sharing of knowledge within the association and with stakeholders.
                 </p>
               </div>
             </div>
