--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                 font-serif
               "
               >
-                42ND MANAGEMENT COMMITTEE
+                43RD MANAGEMENT COMMITTEE
               </p>
               <h1
                 class="
