--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
             >
               <div class="mt-16">
                 <img
-                  src="assets/images/hero/43rde-LCMC-Official-Portrait.jpg"
+                  src="assets/images/hero/43rde-Federal-Cabinet-Official-Portrait.jpg"
                   alt="hero"
                   class="max-w-full mx-auto rounded-t-xl rounded-tr-xl"
                 />
@@ -2447,7 +2447,7 @@
           <div class="w-full md:w-1/2 lg:w-1/3 px-4">
             <div class="mb-10 group wow fadeInUp" data-wow-delay=".15s">
               <div class="rounded overflow-hidden mb-8">
-                <a href="https://www.facebook.com/LSIRCNUSLaw/" class="block">
+                <a href="https://www.instagram.com/nuslawlsirc" class="block">
                   <img
                     src="assets/images/subclubs and interest groups/sized/lsirc.png"
                     alt="image"
