--- a/index.html
+++ b/index.html
@@ -2256,7 +2256,7 @@
                 </li>
                 <li>
                   <a
-                    href="assets/documents/Elections_Standing_Order_2021_v3.docx"
+                    href="assets/documents/Law Club CCEC Standing Order AY2324.pdf"
                     class="
                       inline-flex
                       items-center
@@ -2275,7 +2275,7 @@
                     "
                     download
                   >
-                    Download Elections Rules 2021 (docx)
+                    Download Elections Rules 2023 (pdf)
                   </a>
                 </li>
               </ul>
